--- a/index.html
+++ b/index.html
@@ -1,154 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Mentra - Peer Mentorship App</title>
-  <link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-/>
-
-  <link rel="stylesheet" href="styles.css">
-  <script src='https://meet.jit.si/external_api.js'></script>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mentorship profits</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Top navigation bar -->
-  <div class="top-bar">
-    <div class="app-name">MENTRA</div>
-
     <div class="search-container">
-      <input type="text" class="search-input" placeholder="Search mentors by course...">
+        <input type="text" id="searchInput" placeholder="search for a mentor...">
     </div>
-
-    <div class="top-right">
-      <div class="help-icon" title="Help">❓</div>
-      <button class="mentor-button">Be a Mentor?</button>
+    <div class="container" id="mentorContainer">
+    <div class="mentor-card">
+        <img src="john..jpg">
+        <h2>Mr john D</h2>
+        <p>Expert in Computer Science</p>
+        <button>View more</button>
     </div>
-  </div>
-
-  <!-- Main frame container -->
-  <div class="container">
-    <!-- Frame 1: Discord-style Sidebar -->
-  <div class="sidebar">
-  <div class="sidebar-top-group">
-  <div class="app-logo">
-    <img src="mentra.png" alt="Mentra Logo" />
-  </div>
-
-  <div class="top-icons">
-    <button class="icon-btn" title="Groups"><i class="fas fa-users"></i></button>
-    <button class="icon-btn" title="Tracker"><i class="fas fa-chart-line"></i></button>
-    <button class="icon-btn" title="Search"><i class="fas fa-search"></i></button>
-  </div>
+    <div class="mentor-card">
+        <img src="jane.jpg">
+        <p>Prof In Real Analyse</p>
+        <button>View more</button>
+    </div>
+    <div class="mentor-card">
+        <img src="Ahmed.jpg">
+        <h2>Dr Ahmed K</h2>
+        <p>Prof In software ENG</p>
+        <button>View more</button>
+    </div>
+    <div class="mentor-card">
+        <img src="Maria.jpg">
+        <h2>Ms Maria G</h2>
+        <p>Prof In computational maths</p>
+        <button>View more</button>
+    </div>
+    <div class="mentor-card">
+        <img src="sarah.jpg">
+        <h2>Ms Sarah B</h2>
+        <p>Prof in Intro To Database</p>
+        <button>View more</button>
+    </div>
+    <div class="mentor-card">
+        <img src="David.jpg">
+        <h2>Mr David l </h2>
+        <p>Prof of networking</p>
+        <button>View more</button>
+    </div>
 </div>
-
-  <div class="bottom-icons">
-    <button class="icon-btn" title="Settings"><i class="fas fa-cog"></i></button>
-    <button class="icon-btn" title="Account"><i class="fas fa-user-circle"></i></button>
-  </div>
-</div>
-
-
-    <!-- Frame 2: My Mentors panel -->
-    <div class="left-panel">
-      <div class="section-title">My Mentors</div>
-
-  <!-- Search bar for discussions (like WhatsApp style) -->
-  <div class="discussion-search">
-    <input type="text" placeholder="Search past discussions...">
-  </div>
-
-  <!-- Static list of mentors for now -->
-  <!-- Static list of mentors for now -->
-<div class="mentor-list">
-  <div class="mentor-item">
-    <div class="mentor-avatar"></div>
-    <span class="mentor-name">Jane Doe - Web Dev</span>
-  </div>
-  <div class="mentor-item">
-    <div class="mentor-avatar"></div>
-    <span class="mentor-name">John Smith - Data Science</span>
-  </div>
-  <div class="mentor-item">
-    <div class="mentor-avatar"></div>
-    <span class="mentor-name">Lina Ray - UI/UX</span>
-  </div>
-</div>
-
-    </div>
-
-    <div class="center-panel">
-      <div class="start-session-wrapper">
-        <div id="jitsi-container" style="width: 100%; height: 100%; display: none;"></div>
-        <button class="start-session-button">
-          <img src="ChatGPT Image 8 mai 2025, 08_38_35.png" alt="Start Mascot" class="session-img" />
-          <span>Start Session</span>
-        </button>
-      </div>
-    </div><!-- Frame 3 -->
-
-    <!-- Frame 4: Session, Notes, Assignment -->
-    <div class="right-panel">
-      <!-- Sub-frame 1: Session History -->
-      <div class="subframe session-history">
-        <div class="section-title">Session History</div>
-        <div class="session-item">Apr 2 - UX Basics (45 mins)</div>
-        <div class="session-item">Apr 5 - JS Advanced (60 mins)</div>
-      </div>
-
-      <!-- Sub-frame 2: Notes Upload -->
-      <div class="subframe notes-upload">
-        <div class="section-title">Notes</div>
-        <label class="upload-btn">
-          Upload Notes
-          <input type="file" hidden>
-        </label>
-        <div class="file-list">
-          <div class="file-item">note1.pdf</div>
-          <div class="file-item">chapter-summary.docx</div>
-        </div>
-      </div>
-
-      <!-- Sub-frame 3: Assignment Upload -->
-      <div class="subframe assignment-upload">
-        <div class="section-title">Assignment</div>
-        <label class="upload-btn">
-          Upload Assignment
-          <input type="file" hidden>
-        </label>
-        <div class="file-list">
-          <div class="file-item">assignment1.pdf</div>
-          <div class="file-item">project-notes.docx</div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
-  <script>
-    document.querySelector(".start-session-button").addEventListener("click", () => {
-      // Hide session button and show video container
-      document.querySelector(".start-session-button").style.display = "none";
-      document.getElementById("jitsi-container").style.display = "block";
-
-      const container = document.getElementById("jitsi-container");
-      container.style.display = "block";
-  
-      // Jitsi config
-      const domain = "meet.jit.si";
-      const options = {
-        roomName: "MentraSession_" + Math.floor(Math.random() * 100000), // generate unique room
-        width: "100%",
-        height: "100%",
-        parentNode: container,
-        interfaceConfigOverwrite: {
-          SHOW_JITSI_WATERMARK: false
-        }
-      };
-      const api = new JitsiMeetExternalAPI(domain, options);
-    });
-  </script>
-  
+<script src="script.js"</script>
 </body>
 </html>
