--- a/index.html
+++ b/index.html
@@ -1,154 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Mentra - Peer Mentorship App</title>
-  <link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-/>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" class="width=device-width, initial-scale=1.0" />
+        <title>Aanalytics</title>
+        <link rel="stylesheet" href="./styles.css">
+    <body>
+        <div class="side_menu">
+            <div class="search_bar">
+                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#0000F5"><path d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z"/></svg>
+                <h4>search</h4>
+            </div>    
+            <div class="tutors_list">
 
-  <link rel="stylesheet" href="styles.css">
-  <script src='https://meet.jit.si/external_api.js'></script>
-
-</head>
-<body>
-  <!-- Top navigation bar -->
-  <div class="top-bar">
-    <div class="app-name">MENTRA</div>
-
-    <div class="search-container">
-      <input type="text" class="search-input" placeholder="Search mentors by course...">
-    </div>
-
-    <div class="top-right">
-      <div class="help-icon" title="Help">❓</div>
-      <button class="mentor-button">Be a Mentor?</button>
-    </div>
-  </div>
-
-  <!-- Main frame container -->
-  <div class="container">
-    <!-- Frame 1: Discord-style Sidebar -->
-  <div class="sidebar">
-  <div class="sidebar-top-group">
-  <div class="app-logo">
-    <img src="mentra.png" alt="Mentra Logo" />
-  </div>
-
-  <div class="top-icons">
-    <button class="icon-btn" title="Groups"><i class="fas fa-users"></i></button>
-    <button class="icon-btn" title="Tracker"><i class="fas fa-chart-line"></i></button>
-    <button class="icon-btn" title="Search"><i class="fas fa-search"></i></button>
-  </div>
-</div>
-
-  <div class="bottom-icons">
-    <button class="icon-btn" title="Settings"><i class="fas fa-cog"></i></button>
-    <button class="icon-btn" title="Account"><i class="fas fa-user-circle"></i></button>
-  </div>
-</div>
-
-
-    <!-- Frame 2: My Mentors panel -->
-    <div class="left-panel">
-      <div class="section-title">My Mentors</div>
-
-  <!-- Search bar for discussions (like WhatsApp style) -->
-  <div class="discussion-search">
-    <input type="text" placeholder="Search past discussions...">
-  </div>
-
-  <!-- Static list of mentors for now -->
-  <!-- Static list of mentors for now -->
-<div class="mentor-list">
-  <div class="mentor-item">
-    <div class="mentor-avatar"></div>
-    <span class="mentor-name">Jane Doe - Web Dev</span>
-  </div>
-  <div class="mentor-item">
-    <div class="mentor-avatar"></div>
-    <span class="mentor-name">John Smith - Data Science</span>
-  </div>
-  <div class="mentor-item">
-    <div class="mentor-avatar"></div>
-    <span class="mentor-name">Lina Ray - UI/UX</span>
-  </div>
-</div>
-
-    </div>
-
-    <div class="center-panel">
-      <div class="start-session-wrapper">
-        <div id="jitsi-container" style="width: 100%; height: 100%; display: none;"></div>
-        <button class="start-session-button">
-          <img src="ChatGPT Image 8 mai 2025, 08_38_35.png" alt="Start Mascot" class="session-img" />
-          <span>Start Session</span>
-        </button>
-      </div>
-    </div><!-- Frame 3 -->
-
-    <!-- Frame 4: Session, Notes, Assignment -->
-    <div class="right-panel">
-      <!-- Sub-frame 1: Session History -->
-      <div class="subframe session-history">
-        <div class="section-title">Session History</div>
-        <div class="session-item">Apr 2 - UX Basics (45 mins)</div>
-        <div class="session-item">Apr 5 - JS Advanced (60 mins)</div>
-      </div>
-
-      <!-- Sub-frame 2: Notes Upload -->
-      <div class="subframe notes-upload">
-        <div class="section-title">Notes</div>
-        <label class="upload-btn">
-          Upload Notes
-          <input type="file" hidden>
-        </label>
-        <div class="file-list">
-          <div class="file-item">note1.pdf</div>
-          <div class="file-item">chapter-summary.docx</div>
+            </div>
         </div>
-      </div>
 
-      <!-- Sub-frame 3: Assignment Upload -->
-      <div class="subframe assignment-upload">
-        <div class="section-title">Assignment</div>
-        <label class="upload-btn">
-          Upload Assignment
-          <input type="file" hidden>
-        </label>
-        <div class="file-list">
-          <div class="file-item">assignment1.pdf</div>
-          <div class="file-item">project-notes.docx</div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
-  <script>
-    document.querySelector(".start-session-button").addEventListener("click", () => {
-      // Hide session button and show video container
-      document.querySelector(".start-session-button").style.display = "none";
-      document.getElementById("jitsi-container").style.display = "block";
-
-      const container = document.getElementById("jitsi-container");
-      container.style.display = "block";
-  
-      // Jitsi config
-      const domain = "meet.jit.si";
-      const options = {
-        roomName: "MentraSession_" + Math.floor(Math.random() * 100000), // generate unique room
-        width: "100%",
-        height: "100%",
-        parentNode: container,
-        interfaceConfigOverwrite: {
-          SHOW_JITSI_WATERMARK: false
-        }
-      };
-      const api = new JitsiMeetExternalAPI(domain, options);
-    });
-  </script>
-  
-</body>
+        
+        
+    </body>
+    <script src="js/scripts.js"></script>
 </html>
