--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
   <title>Mentra - Peer Mentorship App</title>
   <link
   rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-/>
-
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <link rel="stylesheet" href="styles.css">
 
 </head>
@@ -27,7 +25,7 @@
   <div class="sidebar">
   <div class="sidebar-top-group">
   <div class="app-logo">
-    <img src="mentra.png" alt="Mentra Logo" />
+    <img src="mentra.jpg" alt="Mentra Logo" />
   </div>
 </div>
 
@@ -35,7 +33,6 @@
     <button class="icon-btn" title="Settings"><i class="fas fa-cog"></i></button>
   </div>
 </div>
-
 
     <!-- Frame 2: My Mentors panel -->
     <div class="left-panel">
@@ -46,7 +43,7 @@
     <input type="text" placeholder="Search mentor">
   </div>
 
-  
+
   <!-- mentor list -->
 <div class="mentor-list">
   <div class="mentor-item">
@@ -67,10 +64,62 @@
 
     <div class="center-panel">
       
+      <div class="fiter-options">
+        <button class="filter">Last 24-Hours</button>
+        <button class="filter">Last 7-days</button>
+        <button class="filter">Last Month</button>
+        <button class="filter">Last 3-Months</button>
+        <button class="filter">Last Year</button>
+      </div>
+
+      <div class="chart">
+        <canvas id="timeChart"></canvas>
+      </div>
+
+      <div class="progress">
+
+      </div>
 
     </div><!-- Frame 3 -->
 
   </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script>
+  const ctx = document.getElementById('timeChart').getContext('2d');
+
+  new Chart(ctx, {
+    type: 'line',
+
+    // Test Data 
+    data: {
+      labels: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri'],
+      datasets: [{
+        label: 'Minutes Spent',
+        data: [20, 30, 40, 35, 25],
+        borderColor: 'rgba(122, 90, 245, 1)',
+        backgroundColor: 'rgba(122, 90, 245, 0.2)',
+        fill: true,
+        tension: 0.3,
+      }]
+    },
+    options: {
+      responsive: true,
+      plugins: {
+        legend: { labels: { color: 'white' } },
+        title: {
+          display: true,
+          text: 'Time Spent on Tasks',
+          color: 'white'
+        }
+      },
+      scales: {
+        x: { ticks: { color: 'white' } },
+        y: { ticks: { color: 'white' }, beginAtZero: true }
+      }
+    }
+  });
+</script>
   
 </body>
 </html>
