--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="logo-container">
+       <img src="logo.jpg" alt="Mentra Logo">
+       <b><span class="logo-text">Mentra</span></b>
     <div class="search-container">
         <input type="text" id="searchInput" placeholder="search for a mentor...">
     </div>
