--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     </div>
     <div class="mentor-card">
         <img src="jane.jpg">
+          <h2>Ms.Jane</h2>
         <p>Prof In Real Analyse</p>
         <button>View more</button>
     </div>
