--- a/index.HTML
+++ b/index.HTML
@@ -7,6 +7,8 @@
   <title>Login Page</title>
 </head>
 <body>
+  <img src="IMG-20250524-WA0032.jpg" alt="Logo" class="corner-image">
+
   <div class="container">
     <h1>Login</h1>
     <form action="/login" method="POST">
@@ -16,7 +18,7 @@
       <label for="password">Password:</label>
       <div class="password-container">
         <input type="password" id="password" name="password" required>
-
+        
       </div>
 
       <button type="submit" class="login-button">Log In</button>
