--- a/tracker.html
+++ b/tracker.html
@@ -6,13 +6,14 @@
   <link
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="tracker.css">
 
 </head>
 <body>
   <!-- Top navigation bar -->
   <div class="top-bar">
     <div class="app-name">MENTRA</div>
+    <button onclick="window.location.href='main.html'" class="homeBtn">Back to App</button>
     <div class="page-name">Mentors Insights</div>
     <div class="top-right">
       <div class="help-icon" title="Help">Help</div>
@@ -137,6 +138,7 @@ document.querySelectorAll('.filter').forEach(button => {
 });
 
 fetchSessions(); // Load initial chart
+
 </script>
   
 </body>
